// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviesCatalog correctly renders default markup 1`] = `
<section
  className="catalog"
>
  <h2
    className="catalog__title visually-hidden"
  >
    Catalog
  </h2>
  <ul
    className="catalog__genres-list"
  >
    <li
      className="catalog__genres-item catalog__genres-item--active"
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        All Genres
      </a>
    </li>
    <li
      className="catalog__genres-item "
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        Genre #1
      </a>
    </li>
    <li
      className="catalog__genres-item "
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        Genre #2
      </a>
    </li>
  </ul>
  <div
    className="catalog__movies-list"
  >
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-11"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/11"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/war-of-the-worlds.jpg"
            preload="none"
            src="http://media.xiph.org/mango/tears_of_steel_1080p.webm"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          War of the Worlds
        </h3>
      </a>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-22"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/22"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/war-of-the-worlds.jpg"
            preload="none"
            src="http://media.xiph.org/mango/tears_of_steel_1080p.webm"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          War of the Worlds
        </h3>
      </a>
    </article>
  </div>
</section>
`;

exports[`MoviesCatalog correctly renders default markup with more button 1`] = `
<section
  className="catalog"
>
  <h2
    className="catalog__title visually-hidden"
  >
    Catalog
  </h2>
  <ul
    className="catalog__genres-list"
  >
    <li
      className="catalog__genres-item catalog__genres-item--active"
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        All Genres
      </a>
    </li>
    <li
      className="catalog__genres-item "
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        Genre #1
      </a>
    </li>
    <li
      className="catalog__genres-item "
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        Genre #2
      </a>
    </li>
  </ul>
  <div
    className="catalog__movies-list"
  >
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-11"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/11"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/war-of-the-worlds.jpg"
            preload="none"
            src="http://media.xiph.org/mango/tears_of_steel_1080p.webm"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          War of the Worlds
        </h3>
      </a>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-22"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/22"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/war-of-the-worlds.jpg"
            preload="none"
            src="http://media.xiph.org/mango/tears_of_steel_1080p.webm"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          War of the Worlds
        </h3>
      </a>
    </article>
  </div>
  <div
    className="catalog__more"
  >
    <button
      className="catalog__button"
      onClick={[Function]}
      type="button"
    >
      Show more
    </button>
  </div>
</section>
`;
